upgrade spring to 3.4.0 (#364)